Fix uneven centering bug for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,20 @@
   //outline: 1px solid red;
 }
 
-.content {
+body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+}
+
+.content {
   padding-left: 20%;
   padding-right: 20%;
-  font-family: sans-serif;
 }
 
 @media (max-width: 767px) {
   .content {
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 0%;
+    padding-right: 0%;
   }
 }
